Thu Sep 26 23:08 2013 CDT
    * lib/acp.js, lib/api.js, lib/server.js, lib/stats.js, www/acp.html,
      www/assets/js/acp.js: Remove the [realtime] 'connection stats'
      tracking that was pretty worthless anyways.

Thu Sep 26 21:42 2013 CDT
    * www/assets/js/player.js: Keep track of the duration of the current
      video and use this information to prevent the player restarting when
      it receives an out of range timestamp

Thu Sep 26 13:29 2013 CDT
    * lib/user.js: Some code style cleanup

Thu Sep 26 13:17 2013 CDT
    * lib/user.js: A few minor cleanups to login functions
    * lib/api.js: Pass the login failure reason to the action log

Tue Sep 24 15:18 2013 CDT
    * www/assets/js/callbacks.js: Double fix search result buttons because
      the paginator was being duplicated

Tue Sep 24 13:45 2013 CDT
    * lib/acp.js: Emit announcements to SSL sockets in addition to regular
      ones.

Tue Sep 24 13:15 2013 CDT
    * www/assets/js/callbacks.js: Instantiate a new paginator for every
      search result- prevents buttons being incorrectly added or omitted.

Mon Sep 23 16:22 2013 CDT
    * lib/user.js: distinguish search result return packets with a 'source'
      field that specifies where the item came from (e.g 'yt' for youtube
      search, 'library' for library search)
    * www/assets/js/callbacks.js: account for the change in lib/user.js
      which adds a 'source' field to library search results
    * www/assets/js/util.js: don't add delete buttons for youtube search
      results.  Apparently people keep clicking them...

Sat Sep 21 23:53 2013 CDT
    * lib/playlist.js, www/assets/js/player.js: Modify the server lead
      function to have a 3 second lead-in period (to allow buffering).
      Videos start at -3 seconds; the client is paused until the time
      reaches 0 seconds.

Sat Sep 21 02:21 2013 CDT
    * www/assets/js/ui.js, www/assets/js/ui.js, www/assets/js/util.js,