@@ -1,3 +1,4 @@
+
 /*
 The MIT License (MIT)
 Copyright (c) 2013 Calvin Montgomery
@@ -9,15 +10,24 @@ The above copyright notice and this permission notice shall be included in all c
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
 
+/*
+    bgtask.js
+
+    Registers background jobs to run periodically while the server is
+    running.
+*/
+
 var Logger = require("./logger");
 
-const STAT_INTERVAL = 60 * 60 * 1000;
-const STAT_EXPIRE = 24 * STAT_INTERVAL;
+var init = null;
 
-module.exports = function (Server) {
-    var db = Server.db;
+/* Stats */
+function initStats(Server) {
+    const STAT_INTERVAL = 60 * 60 * 1000;
+    const STAT_EXPIRE = 24 * STAT_INTERVAL;
 
     setInterval(function () {
+        var db = Server.db;
         var chancount = Server.channels.length;
         var usercount = 0;
         Server.channels.forEach(function (chan) {
@@ -31,3 +41,28 @@ module.exports = function (Server) {
         });
     }, STAT_INTERVAL);
 }
+
+/* Alias cleanup */
+function initAliasCleanup(Server) {
+    const CLEAN_INTERVAL = 60 * 60 * 1000;
+    const CLEAN_EXPIRE = 30 * 24 * 60 * 60 * 1000; // 1 month
+
+    setInterval(function () {
+        console.log("cleaning aliases");
+        Server.db.cleanOldAliases(CLEAN_EXPIRE, function (err) {
+            Logger.syslog.log("Cleaned old aliases");
+            if (err)
+                Logger.errlog.log(err);
+        });
+    }, CLEAN_INTERVAL);
+}
+
+module.exports = function (Server) {
+    if (init === Server) {
+        Logger.errlog.log("WARNING: Attempted to re-init background tasks");
+        return;
+    }
+
+    initStats(Server);
+    initAliasCleanup(Server);
+};
