@@ -1273,22 +1273,16 @@ Database.prototype.recordVisit = function (ip, name, callback) {
     var query = "DELETE FROM aliases WHERE ip=? AND name=?;" +
                 "INSERT INTO aliases VALUES (NULL, ?, ?, ?)";
 
-    self.query(query, [ip, name, ip, name, time], function (err, res) {
-        if(err) {
-            callback(err, null);
-            return;
-        }
+    self.query(query, [ip, name, ip, name, time], callback);
+};
 
-        callback(null, res);
-        query = "DELETE FROM aliases WHERE ip=? AND visit_id NOT IN (" +
-                    "SELECT visit_id FROM (" +
-                        "SELECT visit_id, time FROM aliases WHERE ip=?" +
-                        "ORDER BY time DESC LIMIT 5" +
-                    ") foo" + // The 'foo' here is actually necessary
-                ")";
+Database.prototype.cleanOldAliases = function (expiration, callback) {
+    var self = this;
+    if (typeof callback === "undefined")
+        callback = blackHole;
 
-        self.query(query, [ip, ip]);
-    });
+    var query = "DELETE FROM aliases WHERE time < ?";
+    self.query(query, [Date.now() - expiration], callback);
 };
 
 Database.prototype.listAliases = function (ip, callback) {
@@ -1296,7 +1290,7 @@ Database.prototype.listAliases = function (ip, callback) {
     if(typeof callback !== "function")
         return;
 
-    var query = "SELECT name FROM aliases WHERE ip";
+    var query = "SELECT name,time FROM aliases WHERE ip";
     // Range
     if(ip.match(/^\d+\.\d+\.\d+$/)) {
         query += " LIKE ?";
@@ -1304,6 +1298,8 @@ Database.prototype.listAliases = function (ip, callback) {
     } else {
         query += "=?";
     }
+
+    query += " ORDER BY time DESC LIMIT 5";
 
     self.query(query, [ip], function (err, res) {
         var names = null;
