@@ -241,8 +241,8 @@ var Server = {
         // init ACP
         self.acp = require("./acp")(self);
 
-        // init stats
-        require("./stats")(self);
+        // init background tasks
+        require("./bgtask")(self);
 
         // init media retriever
         self.infogetter = require("./get-info")(self);
